<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background12"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AudioActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/songs"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingTop="25dip" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/s1"
                android:padding="2dip"
                android:text="@string/s1"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/s1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/s2"
                android:padding="2dip"
                android:text="@string/s2"
                android:textColor="@android:color/black" />
            <Button
                android:id="@+id/s2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:textColor="@android:color/black" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/Pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/pause"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/Resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Pause"
        android:layout_alignBottom="@+id/Pause"
        android:layout_centerHorizontal="true"
        android:text="@string/resume"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/Stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Resume"
        android:layout_alignBottom="@+id/Resume"
        android:layout_alignRight="@+id/tableLayout1"
        android:layout_marginRight="16dp"
        android:text="@string/stop"
        android:textColor="@android:color/black" />
</RelativeLayout>